--- a/Web_BanSach/Areas/Css/ThemSach.css
+++ b/Web_BanSach/Areas/Css/ThemSach.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     max-width: 100%;
     margin: 0;
-    background: rgba(255, 255, 255, 0.03);
+    background-color:transparent;
     backdrop-filter: blur(20px);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     position: relative;
